tests/fixtures/rules-tests/bad/AG-008-v1-kotlin-hardcoded-key.kt
class ApiConfig {
    companion object {
        const val OPENAI_API_KEY = "sk-abc123def456ghi789jkl012mno345p"
    }
    private val anthropicKey = "sk-ant-abc123def456ghi789jkl012mno345p"
    val hfToken = "hf_abc123def456ghi789jkl012mno345p"
    var apiKey = "sk-proj-abc123def456ghi789jkl012mno345p678"
}
